# pimble

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md
crates/pimble-app/: Cargo.toml
crates/pimble-app/src/: app.rs  backend.rs  cosmic_editor.rs  main.rs  state.rs
crates/pimble-app/ui/: app.slint  test.slint  theme.slint
crates/pimble-app/ui/editor/: cosmic_text_editor.slint
crates/pimble-cli/: Cargo.toml
crates/pimble-cli/src/: main.rs
crates/pimble-client/: Cargo.toml
crates/pimble-client/src/: client.rs  error.rs  lib.rs
crates/pimble-core/: Cargo.toml
crates/pimble-core/src/: error.rs  lib.rs  node.rs  store.rs  workspace.rs
crates/pimble-crdt/: Cargo.toml
crates/pimble-crdt/src/: document.rs  error.rs  lib.rs  node_content.rs
crates/pimble-plugins/: Cargo.toml
crates/pimble-plugins/src/: error.rs  host.rs  interface.rs  lib.rs
crates/pimble-rpc/: Cargo.toml
crates/pimble-rpc/src/: error.rs  lib.rs  methods.rs  types.rs
crates/pimble-search/: Cargo.toml
crates/pimble-search/src/: error.rs  index.rs  lib.rs  query.rs
crates/pimble-server/: Cargo.toml
crates/pimble-server/src/: error.rs  handler.rs  lib.rs  server.rs
crates/pimble-store/: Cargo.toml
crates/pimble-store/src/: error.rs  lib.rs  local.rs  manager.rs
docs/: ARCHITECTURE.md  MIGRATION_SLINT_TO_RINCH.md  PHASE2_IMPLEMENTATION.md  menubar-component.md
