[package]
name = "pimble-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Slint desktop application for Pimble"

[[bin]]
name = "pimble"
path = "src/main.rs"

[features]
default = ["backend-winit"]
backend-winit = []

[dependencies]
pimble-core = { workspace = true }
pimble-client = { workspace = true }
pimble-rpc = { workspace = true }
slint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
pimble-crdt = { workspace = true }
chrono = { workspace = true }
winit = "0.30"
i-slint-backend-winit = "1.9"
rfd = "0.15"
pulldown-cmark = { workspace = true }
cosmic-text = "0.12"
arboard = "3"

[build-dependencies]
slint-build = "1.9"
