[package]
name = "pimble-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rinch desktop application for Pimble"

[[bin]]
name = "pimble"
path = "src/main.rs"

[features]
default = []
backend-winit = []

[dependencies]
pimble-core = { workspace = true }
pimble-client = { workspace = true }
pimble-rpc = { workspace = true }
rinch = { workspace = true }
rinch-core = { git = "https://github.com/joeleaver/rinch.git" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
pimble-crdt = { workspace = true }
chrono = { workspace = true }
pulldown-cmark = { workspace = true }
arboard = "3"
