[package]
name = "pimble-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Pimble debugging and management"

[[bin]]
name = "pimble-cli"
path = "src/main.rs"

[dependencies]
pimble-core = { workspace = true }
pimble-client = { workspace = true }
pimble-rpc = { workspace = true }
pimble-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
