[package]
name = "pimble-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Client library for connecting to Pimble servers"

[dependencies]
pimble-core = { workspace = true }
pimble-rpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
