[package]
name = "pimble-crdt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CRDT operations using Automerge for Pimble"

[dependencies]
pimble-core = { workspace = true }
automerge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
