[package]
name = "pimble-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Search and indexing for Pimble using vector DB and full-text search"

[dependencies]
pimble-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tantivy = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
