[package]
name = "pimble-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Store abstraction for local and remote storage in Pimble"

[dependencies]
pimble-core = { workspace = true }
pimble-crdt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
